--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 
     </div>
   </div>
-  <div class="parallax"><img src="/assets/images/background1.jpg" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="{{ "/assets/images/background1.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 1"></div>
 </div>
 
 
@@ -66,7 +66,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="/assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
+  <div class="parallax"><img src="{{ "/assets/images/background2.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 2"></div>
 </div>
 
 <div class="container">
@@ -92,6 +92,6 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="/assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
+  <div class="parallax"><img src="{{ "/assets/images/background3.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 3"></div>
 </div>
 
