--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@ layout: default
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+      <h1 class="header center orange-text text-lighten-1">Living-Hinge Notebook</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <h5 class="header col s12 light">A notebook for the creative minded</h5>
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>
       </div>
       <br><br>
 
     </div>
   </div>
-  <div class="parallax"><img src="{{ "/assets/images/background1.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="{{ "/assets/images/desk.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 1"></div>
 </div>
 
 
@@ -28,7 +28,7 @@ layout: default
     <div class="row">
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
           <h5 class="center">Speeds up development</h5>
 
           <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
@@ -37,7 +37,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">group</i></h2>
           <h5 class="center">User Experience Focused</h5>
 
           <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
@@ -46,7 +46,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">settings</i></h2>
           <h5 class="center">Easy to work with</h5>
 
           <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
@@ -66,7 +66,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="{{ "/assets/images/background2.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 2"></div>
+  <div class="parallax"><img src="{{ "/assets/images/close_angle.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 2"></div>
 </div>
 
 <div class="container">
@@ -74,7 +74,7 @@ layout: default
 
     <div class="row">
       <div class="col s12 center">
-        <h3><i class="mdi-content-send brown-text"></i></h3>
+        <h3><i class="mdi-content-send orange-text text-lighten-1"></i></h3>
         <h4>Contact Us</h4>
         <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
       </div>
@@ -92,6 +92,6 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="{{ "/assets/images/background3.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 3"></div>
+  <div class="parallax"><img src="{{ "/assets/images/glasses.jpg" | prepend: site.baseurl }}" alt="Unsplashed background img 3"></div>
 </div>
 
