--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
         <h5 class="header col s12 light">A notebook for the creative minded</h5>
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>
+        <a href="{{ "/order.html" | prepend: site.baseurl }}" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>
       </div>
       <br><br>
 
