added basic style

--- a/order.html
+++ b/order.html
@@ -41,7 +41,12 @@ layout: default
         </button>
       </div>
     </div>
-
-
   </form>
+
+  <div class="row">
+    <img class="responsive-img" src="{{ "/assets/images/process.png" | prepend: site.baseurl }}">
+  </div>
+
+
+
 </div>
