--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
           <h2 class="center orange-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
           <h5 class="center">Speeds up development</h5>
 
-          <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo</p>
+          <p class="light">Change Made Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo</p>
         </div>
       </div>
 
