Card Title, Easy to Work With
Updated the text with the card title and text inside, also wrote some of
the "Easy to Work With text"

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@ layout: default
             <img class="activator" src="{{ "/assets/images/desk.jpg" | prepend: site.baseurl }}">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
+            <span class="card-title activator grey-text text-darken-4">One Piece of Wood<i class="material-icons right">more_vert</i></span>
+            <!--<p><a href="#">This is a link</a></p>-->
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4">One Piece of Wood<i class="material-icons right">close</i></span>
+            <p>The Living Hinge Notebook, designed by Rice University student Mac Lockard, is an incredible feat of engineering and design. The notebook is laser cut from a single piece of quality wood using a 'living hinge' method that gives the hinge the flexibility of a traditional notebook.</p>
+              <br />
+            <p>The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
           </div>
         </div>
       </div>
@@ -54,9 +56,9 @@ layout: default
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center orange-text text-lighten-1"><i class="material-icons">settings</i></h2>
-          <h5 class="center">Easy to work with</h5>
+          <h5 class="center">Endless Pages</h5>
 
-          <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo</p>
+          <p class="light">The Living Hinge Notebook holds inside a 7 x 5 inch notepad that can be removed and replaced whenever paper runs out. The notebook itself can be endlessly used. </p>
         </div>
       </div>
     </div>
