minor change to test access
Test to make sure push is working.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
           <h2 class="center orange-text text-lighten-1"><i class="material-icons">settings</i></h2>
           <h5 class="center">Endless Pages</h5>
 
-          <p class="light">The Living Hinge Notebook holds inside a 7 x 5 inch notepad that can be removed and replaced whenever paper runs out. The notebook itself can be endlessly used. </p>
+          <p class="light">The Living Hinge Notebook holds a 7 x 5 inch notepad that can be removed and replaced whenever paper runs out. The notebook itself can be endlessly used. </p>
         </div>
       </div>
     </div>
