Updated footer, notebook page
Added a description to Rice Studio and links to bottom of page. Pricing
has yet to be touched

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ layout: default
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center orange-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
-          <h5 class="center">Speeds up development</h5>
+          <h5 class="center">Durable as Nature</h5>
 
-          <p class="light">Change Made Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo</p>
+            <p class="light">The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
         </div>
       </div>
 
@@ -47,8 +47,6 @@ layout: default
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">One Piece of Wood<i class="material-icons right">close</i></span>
             <p>The Living Hinge Notebook, designed by Rice University student Mac Lockard, is an incredible feat of engineering and design. The notebook is laser cut from a single piece of quality wood using a 'living hinge' method that gives the hinge the flexibility of a traditional notebook.</p>
-              <br />
-            <p>The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
           </div>
         </div>
       </div>
