--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
       <div class="col s12 center">
         <h2 class="center orange-text text-lighten-1"><i class="material-icons large">shopping_cart</i></h2>
         <h4>Pricing</h4>
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        <p class="left-align light">Notebooks are $35 a piece. If you're a DFA Memeber or Rice Student, contact us for a discount!</p>
       </div>
     </div>
 
