centered pricing, updated footers
updated footers everywhere i saw shiz

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
       <div class="col s12 center">
         <h2 class="center orange-text text-lighten-1"><i class="material-icons large">shopping_cart</i></h2>
         <h4>Pricing</h4>
-        <p class="left-align light">Notebooks are $35 a piece. If you're a DFA Memeber or Rice Student, contact us for a discount!</p>
+        <p class="center">Notebooks are $35 a piece. If you're a DFA Memeber or Rice Student, contact us for a discount!</p>
       </div>
     </div>
 
