Amber's first updates
small fixes. "Support Design. Be Design"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <br><br>
       <h1 class="header center orange-text text-lighten-1">Living-Hinge Notebook</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A notebook for the creative minded</h5>
+        <h5 class="header col s12 light">A notebook for the creative-minded</h5>
       </div>
       <div class="row center">
         <a href="{{ "/order.html" | prepend: site.baseurl }}" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>
@@ -28,7 +28,7 @@ layout: default
     <div class="row">
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center orange-text text-lighten-1"><i class="material-icons">class</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
           <h5 class="center">Durable as Nature</h5>
 
             <p class="light">The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
@@ -53,7 +53,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center orange-text text-lighten-1"><i class="material-icons">repeat</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">settings</i></h2>
           <h5 class="center">Endless Pages</h5>
 
           <p class="light">The Living Hinge Notebook holds a 7 x 5 inch notepad that can be removed and replaced whenever paper runs out. The notebook itself can be endlessly used. </p>
@@ -83,7 +83,7 @@ layout: default
       <div class="col s12 center">
         <h2 class="center orange-text text-lighten-1"><i class="material-icons large">shopping_cart</i></h2>
         <h4>Pricing</h4>
-        <p class="center">Notebooks are $35 a piece. If you're a DFA Memeber or Rice Student, contact us for a discount!</p>
+        <p class="center">Notebooks are $30 apiece. If you're a DFA member or Rice student, contact us for a discount!</p>
       </div>
     </div>
 
@@ -95,7 +95,7 @@ layout: default
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">Support design, be a designer</h5>
+        <h5 class="header col s12 light">Support design. Be design</h5>
       </div>
     </div>
   </div>
