--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
     <div class="row">
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center orange-text text-lighten-1"><i class="material-icons">flash_on</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">class</i></h2>
           <h5 class="center">Durable as Nature</h5>
 
             <p class="light">The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
@@ -53,7 +53,7 @@ layout: default
 
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center orange-text text-lighten-1"><i class="material-icons">settings</i></h2>
+          <h2 class="center orange-text text-lighten-1"><i class="material-icons">loop</i></h2>
           <h5 class="center">Endless Pages</h5>
 
           <p class="light">The Living Hinge Notebook holds a 7 x 5 inch notepad that can be removed and replaced whenever paper runs out. The notebook itself can be endlessly used. </p>
