--- a/order.html
+++ b/order.html
@@ -35,7 +35,9 @@ layout: default
     </div>
       <!--ray added this-->
     <div class="row">
+        <div class="col s6 offest-s3">
             <a href="https://docs.google.com/a/designforamerica.com/forms/d/1igt684fV-B2b_L5Eq2pzVjXor7Pid45x-qtKZ_5LHtQ/viewform?usp=send_form">Complete Order</a>
+        </div>
     </div>
       <!--to here-->
     <div class="row">
