--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ layout: default
         <h2 class="center orange-text text-lighten-1"><i class="material-icons large">shopping_cart</i></h2>
         <h4>Pricing and Customization</h4>
         <p class="center">Notebooks are $30 apiece. If you're a DFA member or Rice student, contact us for a discount!</p>
-        <br />
-        <p>class = "center">Personalize your notebook by getting custom text engraved into the notebook in Gotham or Electra. Show off your DFA pride by getting the DFA logo engraved on your notebook as well!</p>
+        <p class = "center">Personalize your notebook by getting custom text engraved into the notebook in Gotham or Electra. Show off your DFA pride by getting the DFA logo engraved on your notebook as well!</p>
       </div>
     </div>
 
