Linked Google form to "Pre-Order Now"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: default
         <h5 class="header col s12 light">A notebook for the creative-minded</h5>
       </div>
       <div class="row center">
-        <a href="{{ "/order.html" | prepend: site.baseurl }}" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>
+        <!--<a href="{{ "/order.html" | prepend: site.baseurl }}" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>-->
+          <a href="https://docs.google.com/a/designforamerica.com/forms/d/1igt684fV-B2b_L5Eq2pzVjXor7Pid45x-qtKZ_5LHtQ/viewform?usp=send_form">Pre-order Now</a>
       </div>
       <br><br>
 
