--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
       </div>
       <div class="row center">
         <!--<a href="{{ "/order.html" | prepend: site.baseurl }}" id="download-button" class="btn-large waves-effect waves-light orange lighten-1">Pre-order Now</a>-->
-          <a href="https://docs.google.com/a/designforamerica.com/forms/d/1igt684fV-B2b_L5Eq2pzVjXor7Pid45x-qtKZ_5LHtQ/viewform?usp=send_form">Pre-order Now</a>
+          <a href="https://docs.google.com/a/designforamerica.com/forms/d/1igt684fV-B2b_L5Eq2pzVjXor7Pid45x-qtKZ_5LHtQ/viewform">Order Now</a>
       </div>
       <br><br>
 
@@ -32,7 +32,7 @@ layout: default
           <h2 class="center orange-text text-lighten-1"><i class="material-icons">class</i></h2>
           <h5 class="center">Durable as Nature</h5>
 
-            <p class="light">The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility, something that other notebooks can't claim.</p>
+            <p class="light">The wood itself is durable. Whether crammed in backpacks or bathed in coffee, the notebook maintains its initial level of quality and useablility.</p>
         </div>
       </div>
 
@@ -84,8 +84,8 @@ layout: default
       <div class="col s12 center">
         <h2 class="center orange-text text-lighten-1"><i class="material-icons large">shopping_cart</i></h2>
         <h4>Pricing and Customization</h4>
-        <p class="center">Notebooks are $30 apiece. If you're a DFA member or Rice student, contact us for a discount!</p>
-        <p class = "center">Personalize your notebook by getting custom text engraved into the notebook in Gotham or Electra. Show off your DFA pride by getting the DFA logo engraved on your notebook as well!</p>
+        <p class="center">Notebooks are $30 apiece. If you're a DFA member or Rice student, contact us for a discount price!</p>
+        <p class = "center">Personalize your notebook by getting custom text engraved into the notebook in Gotham or Electra. Adding custom engraved text is $5. Show off your DFA pride by getting the DFA logo engraved on your notebook as well!</p>
       </div>
     </div>
 
@@ -97,7 +97,7 @@ layout: default
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light">Support design. Be design</h5>
+        <h5 class="header col s12 light">Support design.</h5>
       </div>
     </div>
   </div>
